Optimize InputIntegerProperty and add InputIntegerPropertyTest